k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scan-visualizer
  labels:
    app: scan-visualizer
spec:
  selector:
    app: scan-visualizer
  ports:
    - name: http
      port: 80
      targetPort: 8501
  type: ClusterIP
