k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scan-visualizer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - scan-visualizer.158.160.167.194.nip.io
      secretName: scan-visualizer-tls
  rules:
    - host: scan-visualizer.158.160.167.194.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scan-visualizer
                port:
                  number: 80
